syntax = "proto2";

import "pyatv/mrp/protobuf/ProtocolMessage.proto";
import "pyatv/mrp/protobuf/VirtualTouchDeviceDescriptorMessage.proto";

extend ProtocolMessage {
  optional RegisterHIDDeviceMessage registerHIDDeviceMessage = 11;
}

message RegisterHIDDeviceMessage {
  optional VirtualTouchDeviceDescriptor deviceDescriptor = 1;
}